--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,17 @@ body {
   margin: 0;
   height: 100vh;
 }
+
+.code-line {
+  padding: 5px 0;
+}
+
+.heightlight {
+  background-color: yellowgreen;
+}
+
+.errdetail {
+  text-align: left;
+  width: 100%;
+  font-size: 16px;
+}
